--- a/src/components/AboutContentStyle.css
+++ b/src/components/AboutContentStyle.css
@@ -1,6 +1,6 @@
 .about{
     width: 100%;
-    margin: 3rem 0;
+    margin: 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,14 @@
     margin: auto;
     padding: 1rem;
     max-width: 350px;
+}
+
+.pro-photo{
+   border-radius: 500px;
+   height: 300px;
+   width: 300px;
+   text-align: center;
+   align-items: center;
 }
 
 .about .p{
