--- a/src/components/Heroimage2Style.css
+++ b/src/components/Heroimage2Style.css
@@ -1,7 +1,7 @@
 .hero-img{
     width: 100%;
     background:rgba(0, 0, 0, 0.5);
-    height: 60vh;
+    height: 80vh;
     position: relative;
 }
 
@@ -34,6 +34,13 @@
 .hero-img p{
     font-size: 1.4rem;
     text-align: center;
+}
+
+.hero-img img{
+    width: 300px;
+    height: 300px;
+    margin: 2rem 0 0;
+    border-radius: 150px;
 }
 
 @media screen and (max-width: 640px) {
