--- a/src/components/AboutContentStyle.css
+++ b/src/components/AboutContentStyle.css
@@ -1,62 +1,76 @@
-.about{
-    width: 100%;
-    margin: 1rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 100%;
+.about {
+  width: 100%;
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 100%;
 }
 
-.about .left{
-    text-align: center;
-    margin: auto;
-    padding: 1rem;
-    max-width: 350px;
+.about .left {
+  text-align: center;
+  margin: auto;
+  padding: 1rem;
+  max-width: 350px;
 }
 
-.pro-photo{
-   border-radius: 500px;
-   height: 300px;
-   width: 300px;
-   text-align: center;
-   align-items: center;
+.pro-photo {
+  border-radius: 500px;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  align-items: center;
 }
 
-.about .p{
-    margin: 1.2rem 0;
+.about .p {
+  margin: 1.2rem 0;
 }
 
-.about .right{
-    max-width: 700px;
+.about .right {
+  max-width: 700px;
 }
 
-.right .img-container{
-    display: flex;
-    grid-template-columns: repeat(12,1fr);
-    position: relative;
-    /* align-items: center; */
-    /* text-align: center; */
-    width: 100%;
-    margin-top: 15%;
-    padding-right: 100px;
-    margin-left: -100px;
+.right .img-container {
+  display: flex;
+  grid-template-columns: repeat(12, 1fr);
+  position: relative;
+  /* align-items: center; */
+  /* text-align: center; */
+  width: 100%;
+  margin-top: 15%;
+  padding-right: 100px;
+  margin-left: -100px;
 }
 
-.right .img{
-    max-width: 90%;
-    border: 1px solid #333;
+.right .img {
+  max-width: 90%;
+  border: 1px solid #333;
 }
 
-.right .top{
-    grid-column: 1 / span 8;
-    grid-row: 1;
-    padding-top: 20%;
-    z-index: 6;
+.right .top {
+  grid-column: 1 / span 8;
+  grid-row: 1;
+  padding-top: 20%;
+  z-index: 6;
 }
 
-.right .bottom{
-    grid-column: 4 / -1;
-    grid-row: 1;
-    z-index: 5;
+.right .bottom {
+  grid-column: 4 / -1;
+  grid-row: 1;
+  z-index: 5;
 }
+
+/* @media screen and (max-width: 640px) {
+    .right .img-container{
+        display: flex;
+        grid-template-columns: repeat(12,1fr);
+        position: relative;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        margin-top: 15%;
+        padding-right: 100px;
+        margin-left: -100px;
+    }
+} */
