--- a/src/components/WorkCardStyles.css
+++ b/src/components/WorkCardStyles.css
@@ -1,54 +1,54 @@
-.project-heading{
-    text-align: center;
-    padding: 4rem 0 2rem 0;
+.project-heading {
+  text-align: center;
+  padding: 4rem 0 2rem 0;
 }
 
-.project-container{
-    max-width: 1000px; /*Change the width*/
+.project-container {
+  max-width: 1000px; /*Change the width*/
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(
+    2,
+    1fr
+  ); /*Reapeat aka athule 2da 3da anuwa puluwan athanata ena gaana wenas karanna*/
+  grid-gap: 150px;
+  padding-bottom: 5rem;
+}
+
+.project-card {
+  background: #1a1919;
+  padding: 1.2rem 1rem;
+}
+
+.project-card img {
+  width: 100%;
+}
+
+.pro-details p {
+  padding-bottom: 1rem;
+  font-size: 1.1rem;
+  text-align: justify;
+}
+
+@media screen and (max-width: 740px) {
+  .project-container {
+    max-width: 90%;
     margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2,1fr); /*Reapeat aka athule 2da 3da anuwa puluwan athanata ena gaana wenas karanna*/
-    grid-gap: 150px;
-    padding-bottom: 5rem;
+    grid-template-columns: 1fr;
+  }
 }
 
-.project-card{
-    background: #1a1919;
-    padding: 1.2rem 1rem;
-
+.project-title {
+  color: #fff;
+  padding: 1rem 0;
 }
 
-.project-card img{
-    width: 100%;
+.pro-btns {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0;
 }
 
-.pro-details p{
-    padding-bottom: 1rem;
-    font-size: 1.1rem;
-    text-align: justify;
+.pro-btns .btn {
+  padding: 0.5rem 1rem;
 }
-
-@media screen and (max-width:740px) {
-    .project-container{
-        max-width: 90%;
-        margin: auto;
-        grid-template-columns: 1fr;
-    }
-}
-
-.project-title{
-    color: #fff;
-    padding: 1rem 0;
-}
-
-.pro-btns{
-    display: flex;
-    justify-content: space-between;
-    padding: 0.5rem 0;
-}
-
-.pro-btns .btn{
-    padding: 0.5rem 1rem;
-}
-
-
