--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
-body{
-  background:#000;
+body {
+  background: #000;
 }
 
-h1,h4,p,a{
+h1,
+h4,
+p,
+a {
   color: #fff;
   text-decoration: none;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
-.btn{
+.btn {
   padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
@@ -31,12 +34,12 @@ ul{
   cursor: pointer;
 }
 
-.btn-light{
+.btn-light {
   background: transparent;
   color: #fff;
 }
 
-.btn:hover{
+.btn:hover {
   background: rgba(255, 255, 255, 0.2);
   color: #fff;
   transition: 0.3s;
